src/test/wacc/invalid/semanticErr/array/nonMatchingArrays.wacc
# Trying to assign the wrong array dimension to a variable, or non-matching pairs.
# Thanks to Ethan Range, Fawwaz Abdullah, Robbie Buxton, and Edward Hartley

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  int[] a = [1, 2];
  int[][] aa = [a, a];
  int[] b = aa
end
